More flexible display of additional components in the main window